# gl

./: CMakeLists.txt  fragment_shader.glsl  main.cpp
libs/GLShader/: CMakeLists.txt  GLShader.cpp
libs/GLShader/include/: GLShader.h
libs/glad/include/glad/: gl.h  vulkan.h
libs/glad/src/: gl.c  vulkan.c
